--- a/admin/static/device.css
+++ b/admin/static/device.css
@@ -9,8 +9,14 @@ body {
     background: #fff;
     min-height: 100vh;
     overflow-x: hidden;
+    display: flex;
 }
 
+.container {
+  display: flex;
+  gap: 20px;
+  width: 100%;
+}
 
 /* Sidebar Styles */
 .sidebar {
@@ -23,11 +29,12 @@ body {
     position: relative;
     min-height: 100vh;
     box-shadow: 2px 0 10px rgba(0,0,0,0.07);
+    padding-top: 20px;
 }
 
 .admin-profile {
     text-align: center;
-    margin-bottom: 40px;
+    margin-top: 20px;
     padding: 0 20px;
 }
 
@@ -44,8 +51,6 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    margin-top: 50px;
-    margin-bottom: 50px;
 }
 
 .admin-profile h2 {
@@ -53,12 +58,13 @@ body {
     font-size: 24px;
     font-weight: 600;
     margin-bottom: 50px;
-    margin-top: 50px;
 }
 
 .sidebar-nav {
     flex: 1;
     padding: 0 20px;
+    width: 100%;
+    margin-top: 20px;
 }
 
 .nav-item {
@@ -75,7 +81,6 @@ body {
     margin-right: 100px;
     padding-left: 30px;
     padding-right: 50px;
-    margin-right: 0;
     width: 100%;
     box-sizing: border-box;
 }
