--- a/admin/templates/dashboard.html
+++ b/admin/templates/dashboard.html
@@ -46,7 +46,7 @@
                 <section class="members">
                     <h1>Members</h1>
                     <div class="members-image">
-                        <img src="https://via.placeholder.com/400x250/2C3E50/FFFFFF?text=Group+Photo" alt="Members Group Photo">
+                        <img src="/static/image/kelompok.jpeg" alt="Members Group Photo">
                     </div>
                 </section>
             </div>
