--- a/admin/templates/history.html
+++ b/admin/templates/history.html
@@ -74,6 +74,12 @@
             </div>
         </main>
     </div>
+    
+    <div class="logo">
+                <img src="/static/image/Logo PBL.png" alt="FBL Logo">
+            </div>
+        </div>
+    </div>
 
     <script>
         function showLinks(browser) {
