--- a/admin/templates/settings.html
+++ b/admin/templates/settings.html
@@ -59,6 +59,12 @@
         </div>
     </div>
 
+    <div class="logo">
+                <img src="/static/image/Logo PBL.png" alt="FBL Logo">
+            </div>
+        </div>
+    </div>
+
     <script>
         // Script to toggle password visibility
         function togglePassword(id) {
