--- a/admin/static/passcookies.css
+++ b/admin/static/passcookies.css
@@ -158,6 +158,18 @@ h1::after {
   width: 100%;
 }
 
+.logo {
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+}
+
+.logo img {
+    width: 60px;
+    height: 80px;
+    transition: transform 0.3s ease;
+}
+
 /* Table styling */
 table.dataTable {
     width: 100% !important;
