--- a/admin/templates/passcookies.html
+++ b/admin/templates/passcookies.html
@@ -58,6 +58,12 @@
         </main>
     </div>
 
+    <div class="logo">
+                <img src="/static/image/Logo PBL.png" alt="FBL Logo">
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
     <script>
