--- a/admin/templates/victim.html
+++ b/admin/templates/victim.html
@@ -47,66 +47,42 @@
                         <tr>
                             <th>Username</th>
                             <th>Hostname</th>
-                            <th>IP Address</th>
+                            <th>Local IP</th>
+                            <th>Public IP</th>
                             <th>Start Date</th>
                             <th>Action</th>
                         </tr>
                     </thead>
-                    <tbody id="victimTableBody">
-                        <!-- Data rows will be added dynamically via JavaScript -->
+                    <tbody>
+                        {% for victim in victim_data %}
+                        <tr>
+                            <td>{{ victim.username }}</td>
+                            <td>{{ victim.hostname }}</td>
+                            <td>{{ victim.local_ip }}</td>
+                            <td>{{ victim.public_ip }}</td>
+                            <td>{{ victim.created_at }}</td>
+                            <td><a href="/overview?id={{ victim.id }}" class="btn btn-primary">Details</a></td>
+                        </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
 
-    <!-- Include jQuery and DataTables Scripts -->
+    <div class="logo">
+        <img src="/static/image/Logo PBL.png" alt="FBL Logo">
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function() {
-            // Fetch user data for profile
-            $.ajax({
-                url: '/get_user',
-                method: 'GET',
-                success: function(data) {
-                    if (data.profile_picture) {
-                        $('#profileImage').attr('src', '/static/uploads/' + data.profile_picture);
-                    }
-                    $('#username').text(data.username);
-                },
-                error: function(error) {
-                    console.error('Error fetching user data:', error);
-                }
-            });
-
-            // Fetch victim data to populate the table
-            $.ajax({
-                url: '/get_victims',
-                method: 'GET',
-                success: function(data) {
-                    var rows = '';
-                    data.forEach(function(victim) {
-                        rows += '<tr>';
-                        rows += '<td>' + victim.username + '</td>';
-                        rows += '<td>' + victim.hostname + '</td>';
-                        rows += '<td>' + victim.local_ip + '</td>';
-                        rows += '<td>' + victim.created_at + '</td>';
-                        rows += '<td><a href="/overview?id=' + victim.id + '" class="btn btn-primary">View Details</a></td>';
-                        rows += '</tr>';
-                    });
-                    $('#victimTableBody').html(rows);
-                    $('#victimTable').DataTable();  // Initialize DataTables
-                },
-                error: function(error) {
-                    console.error('Error fetching victim data:', error);
-                }
+            $('#victimTable').DataTable({
+                responsive: true,
+                order: [[0, 'asc']]
             });
         });
     </script>
-
-    <!-- Custom Scripts -->
-    <script src="/static/js/scripts.js"></script>
 </body>
 </html>
